# office2pdf

./: .gitignore  README.md  build.ps1  main.py  office2pdf.json.example  pyproject.toml  requirements.txt  service.py
