[project]
name = "office2pdf"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "flask>=3.1.2",
    "pywin32>=311",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pycodestyle>=2.14.0",
    "pyinstaller>=6.18.0",
    "pyinstaller-hooks-contrib>=2026.0",
]
